[@mantine/schedule] WeekView: Fix current time indicator overflowing the parent container with some time intervals settings

--- a/packages/@mantine/schedule/src/components/WeekView/WeekView.module.css
+++ b/packages/@mantine/schedule/src/components/WeekView/WeekView.module.css
@@ -21,6 +21,7 @@
 .weekViewInner {
   display: flex;
   position: relative;
+  overflow: hidden;
 }
 
 .weekViewScrollArea {
@@ -218,7 +219,8 @@
     height: 100%;
   }
 
-  @mixin hover {
+  &:hover,
+  &:focus-within {
     .weekViewAllDaySlotsEvents {
       overflow: visible;
 
